--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,45 @@
 
 		<link href="//build.origami.ft.com/bundles/css?modules=o-fonts@^1.6.7,o-ft-icons@^2.3.6,o-techdocs,o-grid,o-forms,o-buttons" rel="stylesheet">
 		<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+
+		<!-- build:css styles/main.css -->
+		<link rel="stylesheet" href="styles/main.css">
+		<!-- endbuild -->
+
 		<link rel="shortcut icon" href="/favicon.ico">
 
 	</head>
-	<body>
+	<body class='o-techdocs'>
+		<header class="o-header" data-o-component="o-header">
+			<div class="o-header__container">
+				<div class="o-header__inner">
+					<div class="o-header__primary">
+						<div class="o-header__primary__left">
+							<a class="o-header__logo o-header__logo--ft" href="http://www.ft.com">
+								<abbr title="Financial Times">FT</abbr>
+								<h1 class="o-header__title">Slurpage - Sappy</h1></a>
+						</div>
+						<div class="o-header__primary__right">People Network</div>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<div class="o-techdocs-layout">
+			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content">
+
+				<h1>Hello World</h1>
+
+			</div><!-- /o-techdocs-main -->
+		</div><!-- /o-techdocs-layout -->
+
+		<footer class="o-techdocs-footer">
+			<div class="o-techdocs-footer__inner">
+				<p class="o-techdocs-footer__secondary"><!--<a href="http://github.com/financial-times">View project on GitHub</a>--></p>
+				<p>&#xA9; THE FINANCIAL TIMES LTD. FT and 'Financial Times' are
+					trademarks of The Financial Times Ltd.</p>
+			</div>
+		</footer>
 
 		<script src="//polyfill.webservices.ft.com/v1/polyfill.min.js?features=fetch,default"></script>
 		<!-- build:js scripts/main.js -->
