--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 		<div class="o-techdocs-layout">
 			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content">
 
-				<h1>Hello World</h1>
+				<h1>Capi Sapi Mappy</h1>
 
 			</div><!-- /o-techdocs-main -->
 		</div><!-- /o-techdocs-layout -->
