--- a/app/erdos.html
+++ b/app/erdos.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-		<title>Sappy Cappy Slappy</title>
+		<title>Erdos chain</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<script>
@@ -36,7 +36,7 @@
 								<abbr title="Financial Times">FT</abbr>
 								<h1 class="o-header__title">Slurpage - Sappy</h1></a>
 						</div>
-						<div class="o-header__primary__right">People Network</div>
+						<div class="o-header__primary__right">Erdos chain</div>
 					</div>
 				</div>
 			</div>
@@ -45,7 +45,22 @@
 		<div class="o-techdocs-layout">
 			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content">
 
-				<h1>Capi Sapi Mappy</h1>
+				<datalist id="data-people"></datalist>
+
+				<h2>Find an Erdos chain!</h2>
+
+				<form id='erdos-form'>
+					<label>
+						From <input list="data-people" name="start">
+					</label>
+					<label>
+						To <input list="data-people" name="end">
+					</label>
+					<input type='submit'>
+				</form>
+
+
+
 
 			</div><!-- /o-techdocs-main -->
 		</div><!-- /o-techdocs-layout -->
@@ -58,8 +73,8 @@
 			</div>
 		</footer>
 
-		<!-- build:js scripts/main.js -->
-		<script src="scripts/main.js"></script>
+		<!-- build:js scripts/erdos.js -->
+		<script src="scripts/erdos.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
