Allow tweaking of parameters

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,37 @@
 		</header>
 
 		<div class="o-techdocs-layout">
-			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content"></div><!-- /o-techdocs-main -->
+			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content">
+
+				<div class="settings-wrapper">
+					<div class="o-techdocs-card sappy-settings collapsed">
+						<div class="o-techdocs-card__context collapse-trigger">
+							<div class="o-techdocs-card__icon"><i class="fa fa-gear"></i></div>
+							<div class="o-techdocs-card__heading">
+								<div class="o-techdocs-card__title">Graph Settings</div>
+								<div class="o-techdocs-card__subtitle">Tweak parameters for the graph</div>
+							</div>
+						</div>
+						<div class="o-techdocs-card__actions collapsable">
+							<div class="sappy-settings_settings-sliders"></div>
+						</div>
+					</div>
+					<div class="o-techdocs-card sappy-people collapsed">
+						<div class="o-techdocs-card__context collapse-trigger">
+							<div class="o-techdocs-card__icon"><i class="fa fa-users"></i></div>
+							<div class="o-techdocs-card__heading">
+								<div class="o-techdocs-card__title">People in the graph</div>
+								<div class="o-techdocs-card__subtitle">
+									Each circle represents a person. The area of the circle indicates how often they are mentioned in the ft. The red dot it the root node you selected.
+								</div>
+							</div>
+						</div>
+						<div class="o-techdocs-card__actions collapsable">
+							<div class="sappy-settings_people-list-target"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<!-- build:js scripts/main.js -->
