--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-		<title>Sappy Cappy Slappy</title>
+		<title>Sapi Capi Mapi</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<script>
