--- a/app/erdos.html
+++ b/app/erdos.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-		<title>Erdos chain</title>
+		<title>Six Degrees of Angela Merkel</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<script>
@@ -34,9 +34,9 @@
 						<div class="o-header__primary__left">
 							<a class="o-header__logo o-header__logo--ft" href="http://www.ft.com">
 								<abbr title="Financial Times">FT</abbr>
-								<h1 class="o-header__title">Slurpage - Sappy</h1></a>
+								<h1 class="o-header__title">Six degrees of Angela Merkel</h1></a>
 						</div>
-						<div class="o-header__primary__right">Erdos chain</div>
+						<div class="o-header__primary__right">Merkel chain</div>
 					</div>
 				</div>
 			</div>
@@ -47,9 +47,7 @@
 
 				<datalist id="data-people"></datalist>
 
-				<h2>Find an Erdos chain!</h2>
-
-				<p>Mathematician <a href=''>Paul Erdős</a> collaborated with so many peers that the <a href='https://en.wikipedia.org/wiki/Erd%C5%91s_number'>Erdős number</a> came to be known as the 'collaborative distance' between Erdős and any other academic.  It's more well known cousin, the <a href='https://en.wikipedia.org/wiki/Six_Degrees_of_Kevin_Bacon#Bacon_numbers'>Bacon number</a>, came 25 years later.</p>
+				<h2>Find a Merkel chain!</h2>
 
 				<p>Use this tool to find out how noteworthy people are connected via news and features published by the Financial Times.  To keep things fresh and dynamic, we only consider articles published in the last 100 days.  In that time, we have written about <span id='people-count'></span> people.  What's the longest chain you can find?</p>
 
