--- a/app/graph.html
+++ b/app/graph.html
@@ -6,7 +6,7 @@
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
 		<title>Six Degrees of Angela Merkel</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=1200, initial-scale=1">
 
 		<script>
 			/* global document, window */
