--- a/app/graph.html
+++ b/app/graph.html
@@ -61,8 +61,7 @@
 			</div>
 			<div class="topics">
 				The week's primary themes:
-				<ul>
-					<li>Dancer or Human</li>
+				<ul class="topics_topic-list">
 				</ul>
 			</div>
 			<div class="content">
