--- a/app/404.html
+++ b/app/404.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-		<title>Six Degrees of Angela Merkel</title>
+		<title>404 - Page not found</title>
 		<meta name="viewport" content="width=1200, initial-scale=1">
 
 		<script>
