Can now click on nodes to search and updated the copy

--- a/app/404.html
+++ b/app/404.html
@@ -33,9 +33,9 @@
 			<div class="o-techdocs-main o-techdocs-main--fullwidth o-techdocs-content">
 
 				<div class="sorry-hero">
-					<h1 class="sorry-hero_title">Sorry, the page cannot be found.<br />Error 404.</h1>
-					<h3 class="sorry-hero_subtitle needs-cut-mustard">We're sorry this link is broken but checkout how our news stories link together people in the news.</h3>
-					<span class="hide-overlay">Apology Accepted</span>
+					<h1 class="sorry-hero_title">This link is broken.<br />This might be because you have entered the web address (URL) incorrectly or the page may have moved.</h1>
+					<h3 class="sorry-hero_subtitle needs-cut-mustard">Links are interesting, and we're sorry this one didn't work.  Our news stories link people in the news together in lots of interesting ways.  Click or tap a person to find out more.</h3>
+					<input class="o-buttons o-buttons--big hide-overlay" type="submit" value="That is unfortunate">
 				</div>
 
 				<div class="settings-wrapper">
