--- a/app/graph.html
+++ b/app/graph.html
@@ -69,8 +69,6 @@
 			</div>
 		</div>
 
-		<!-- build:js scripts/main.js -->
-		<script src="scripts/main.js"></script>
-		<!-- endbuild -->
+		<script src="scripts/graph.js"></script>
 	</body>
 </html>
