--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 			}
 		</script>
 
-		<link href="//build.origami.ft.com/bundles/css?modules=o-fonts@^1.6.7,o-ft-icons@^2.3.6,o-techdocs,o-grid,o-forms,o-buttons" rel="stylesheet">
-		<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+		<link href="https://build.origami.ft.com/bundles/css?modules=o-fonts@^1.6.7,o-ft-icons@^2.3.6,o-techdocs@^4.0.1,o-grid@^3.0.0,o-forms@^1.0.0,o-buttons@^3.0.3" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 
 		<!-- build:css styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css">
