--- a/app/erdos.html
+++ b/app/erdos.html
@@ -67,9 +67,9 @@
 
 				<p>Stuck?  Try:</p>
 				<ul>
-					<li><a href='/erdos.html?from=people:Marine%20Le%20Pen&amp;to=people:Jeff%20Bezos'>Marine Le Pen to Jeff Bezos</a></li>
-					<li><a href='/erdos.html?from=people:Mark%20Carney&amp;to=people:Theresa%20May'>Mark Carney to Theresa May</a></li>
-					<li><a href='/erdos.html?from=people:Alec%20Baldwin&amp;to=people:Beyoncé'>Alec Baldwin to Beyoncé</a></li>
+					<li><a href='erdos.html?from=people:Marine%20Le%20Pen&amp;to=people:Jeff%20Bezos'>Marine Le Pen to Jeff Bezos</a></li>
+					<li><a href='erdos.html?from=people:Mark%20Carney&amp;to=people:Theresa%20May'>Mark Carney to Theresa May</a></li>
+					<li><a href='erdos.html?from=people:Alec%20Baldwin&amp;to=people:Beyoncé'>Alec Baldwin to Beyoncé</a></li>
 				</ul>
 
 			</div><!-- /o-techdocs-main -->
@@ -83,8 +83,8 @@
 			</div>
 		</footer>
 
-		<!-- build:js scripts/erdos.js -->
-		<script src="scripts/erdos.js"></script>
+		<!-- build:js scriptserdos.js -->
+		<script src="scriptserdos.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
