MODIFIED: fixed bug with js call and amended url for slurp service

--- a/app/erdos.html
+++ b/app/erdos.html
@@ -83,8 +83,8 @@
 			</div>
 		</footer>
 
-		<!-- build:js scriptserdos.js -->
-		<script src="scriptserdos.js"></script>
+		<!-- build:js scripts/erdos.js -->
+		<script src="scripts/erdos.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
