MODIFIED: edos-demno now generates working examples

--- a/app/erdos.html
+++ b/app/erdos.html
@@ -32,7 +32,7 @@
 				<div class="o-header__inner">
 					<div class="o-header__primary">
 						<div class="o-header__primary__left">
-							<a class="o-header__logo o-header__logo--ft" href="http://www.ft.com">
+							<a class="o-header__logo o-header__logo--ft" href="/">
 								<abbr title="Financial Times">FT</abbr>
 								<h1 class="o-header__title">Six degrees of Angela Merkel</h1></a>
 						</div>
@@ -49,7 +49,7 @@
 
 				<h2>Find a Merkel chain!</h2>
 
-				<p>Use this tool to find out how noteworthy people are connected via news and features published by the Financial Times.  To keep things fresh and dynamic, we only consider articles published in the last 100 days.  In that time, we have written about <span id='people-count'></span> people.  What's the longest chain you can find?</p>
+				<p>Use this tool to find out how noteworthy people are connected via news and features published by the Financial Times.  To keep things fresh and dynamic, we only consider articles published in the last 7 days.  In that time, we have written about <span id='people-count'></span> people, and not all of them are connected with each other.  What's the longest chain you can find? There may be a briefest of delays whilst it is calculated.</p>
 
 				<form id='erdos-form'>
 					<label class="o-forms-label">
@@ -67,9 +67,8 @@
 
 				<p>Stuck?  Try:</p>
 				<ul>
-					<li><a href='erdos.html?from=people:Marine%20Le%20Pen&amp;to=people:Jeff%20Bezos'>Marine Le Pen to Jeff Bezos</a></li>
-					<li><a href='erdos.html?from=people:Mark%20Carney&amp;to=people:Theresa%20May'>Mark Carney to Theresa May</a></li>
-					<li><a href='erdos.html?from=people:Alec%20Baldwin&amp;to=people:Beyoncé'>Alec Baldwin to Beyoncé</a></li>
+					<li><span id='from-to-example'></span></li>
+					<li><span id='from-to-example2'></span></li>
 				</ul>
 
 			</div><!-- /o-techdocs-main -->
