--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 				<div class="o-header__inner">
 					<div class="o-header__primary">
 						<div class="o-header__primary__left">
-							<a class="o-header__logo o-header__logo--ft" href="http://www.ft.com">
+							<a class="o-header__logo o-header__logo--ft" href="/">
 								<abbr title="Financial Times">FT</abbr>
 								<h1 class="o-header__title">Six degrees of Angela Merkel</h1></a>
 						</div>
