REFACTORED: replace original people call with islands call

--- a/app/erdos.html
+++ b/app/erdos.html
@@ -49,7 +49,7 @@
 
 				<h2>Find a Merkel chain!</h2>
 
-				<p>Use this tool to find out how noteworthy people are connected via news and features published by the Financial Times.  To keep things fresh and dynamic, we only consider articles published in the last 7 days.  In that time, we have written about <span id='people-count'></span> people, and not all of them are connected with each other.  What's the longest chain you can find? There may be a briefest of delays whilst it is calculated.</p>
+				<p>Use this tool to find out how noteworthy people are connected via news and features published by the Financial Times.  To keep things fresh and dynamic, we only consider articles published in the last 7 days. In that time, we have written about <span id='people-count' class="count"></span> people, of which <span id='biggest-island-count' class="count"></span> form the largest connected group, <span id='next-biggest-island-count' class="count"></span> form the next largest connected group, and <span id='isolated-count' class="count"></span> are not connected with anyone else. What's the longest chain you can find? There may be a briefest of delays whilst it is calculated.</p>
 
 				<form id='erdos-form'>
 					<label class="o-forms-label">
