Add the correct URL for OBS

--- a/app/404.html
+++ b/app/404.html
@@ -16,7 +16,7 @@
 			}
 		</script>
 
-		<link href="https://build.origami.ft.com/bundles/css?modules=o-fonts@^1.6.7,o-ft-icons@^2.3.6,o-techdocs,o-grid,o-forms,o-buttons" rel="stylesheet">
+		<link href="https://origami-build.ft.com/bundles/css?modules=o-fonts@^1.6.7,o-ft-icons@^2.3.6,o-techdocs,o-grid,o-forms,o-buttons" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
 
 		<!-- build:css styles/main.css -->
